test_data/Xml/Unexpected/Unserializable/InvalidClassName/submodel/wrong.xml.exception
Expected an element representing an instance of class Submodel with element name submodel, but got: utterlyInvalid at: the beginning